fix: top section takes up too much space - needs to be fixed

--- a/frontend/src/components/PurchaseTickets/TicketPurchase/SeatConfirmation/seatConfirmation.scss
+++ b/frontend/src/components/PurchaseTickets/TicketPurchase/SeatConfirmation/seatConfirmation.scss
@@ -10,7 +10,7 @@
 		h1 {
 			margin-bottom: rem(6);
 		}
-		flex-basis: 27%;
+		height: 161px;
 		border-bottom: border();
 	}
 
